--- a/src/components/workarea/main.css
+++ b/src/components/workarea/main.css
@@ -179,11 +179,12 @@
 }
 
 .buttons > button{
+  text-align: center;
   font-family: "Manrope";
   font-size: 15px;
   align-self: center;
   border-radius: 20px;
-  width: 295px;
+  width: 200px;
   height: 50px;
   background-color:#ED5964;
   color: #fff;
@@ -324,3 +325,153 @@
   gap: 15px;
   position: relative;
 }
+
+.glavnay_info {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3,auto);
+  grid-template-areas:
+    "a a a"
+    "b b c"
+    "d e c";
+  gap: 30px;
+  flex-grow: 1;
+  background-color: #eee;
+  padding-left: 30px;
+  margin-right: 30px;
+}
+
+.glavnay_info > div {
+  border:  none;
+  border-radius: 20px;
+  background-color: #fff
+}
+
+.short_info{
+  grid-area: a;
+  display: flex;
+}
+
+.discription_and_elzhur > div > button{
+  text-align: center;
+  font-family: "Manrope";
+  font-size: 15px;
+  align-self: center;
+  border-radius: 20px;
+  width: 295px;
+  height: 50px;
+  background-color:#ED5964;
+  color: #fff;
+  border: none;
+  margin-bottom: 15px;
+  cursor: pointer;
+  margin: 0px 30px 25px 30px;
+}
+
+.last_news{
+  grid-area: b;
+}
+
+.button_about_gia{
+  padding: 0px 30px 15px 30px;
+  color: #ED5964;
+  cursor: pointer;
+  display: flex;
+  gap: 10px;
+}
+
+.extra_lessons{
+  grid-area: c;
+}
+
+.sections_filter{
+  padding: 5px 30px 20px 30px;
+}
+.dropbtn {
+
+  background-color: white;
+  color: #0B0B0B;
+  font-family: Manrope;
+  font-size: 15px;
+  border: solid #2A2A2A 1px;
+  cursor: pointer;
+  padding: 8px 20px;
+  border-radius: 20px;
+}
+
+  .dropdown {
+      position: relative;
+      display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f6f6f6;
+      min-width: 230px;
+      border: 1px solid #ddd;
+      z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
+
+.volleybal{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sex_and_age{
+  padding: 0px 30px 20px 30px;
+}
+
+.sex{
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+.day_and_time{
+  padding: 0px 30px 20px 30px;
+}
+
+.time{
+  padding-top: 10px;
+}
+
+.first_class{
+  grid-area: d;
+}
+
+.food_school{
+  grid-area: e;
+}
+
+.button_black > button{
+  text-align: center;
+  font-family: "Manrope";
+  font-size: 15px;
+  align-self: center;
+  border-radius: 20px;
+  padding: 10px 20px;
+  height: 50px;
+  background-color:#2A2A2A;
+  color: #fff;
+  border: none;
+  margin-bottom: 15px;
+  cursor: pointer;
+  margin: 0px 30px 25px 30px;
+}
+
